refactor: 해시태그 조회 시, description 조회 적용